# NetAtlas

./: .gitignore  README.md
backend/: .env.example  NetAtlas.spec  README.md  pyproject.toml
backend/app/: geoip.py  ingestion.py  launcher.py  main.py  models.py  parser.py  receiver.py  runtime_env.py  schemas.py  tls.py
backend/app/core/: config.py  db.py
backend/netatlas_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_config.py  test_geoip.py  test_ingestion.py  test_ingestion_unit.py  test_launcher.py  test_parser.py  test_runtime_env.py  test_tls.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  app-formatting.test.ts  app-formatting.ts  main.tsx  styles.css
frontend/src/components/: FlatMap.tsx  GlobeMap.tsx
frontend/src/test/: test-utils.tsx
installer/: Installation Instructions.txt  NetAtlas.env  NetAtlas.wxs
scripts/: build-msi.ps1
